--- a/service.yaml
+++ b/service.yaml
@@ -11,5 +11,7 @@ spec:
     port: 8080
     protocol: TCP
     targetPort: 8080
-  sessionAffinity: None
+  selector:
+    app: statping
   type: ClusterIP
+
